deployment/components/infra/log/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: log-ingress
spec:
  tls:
    secretName: das-ssl
  rules:
  - http:
      paths:
      - path: /elasticsearch
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /kibana
        backend:
          serviceName: kibana
          servicePort: 5601
      - path: /logstash
        backend:
          serviceName: logstash
          servicePort: 5044
